Fix overflow issues and user hacks

--- a/src/Game.css
+++ b/src/Game.css
@@ -13,6 +13,7 @@
   bottom: 0;
   top: 0;
   z-index: 1;
+  overflow: hidden;
 }
 
 .Game-controls {
